--- a/trunk/conf/esb_monitor.conf
+++ b/trunk/conf/esb_monitor.conf
@@ -1,2 +1,2 @@
-monitor_server errortrack-159 errortracksite-159 esbsite-159 servicelogger-159 point-159 custbasic-159 custblack-159  prdctcmt-159 prdctrev-159 usergroup-www-159 usergroup-back-159;
-monitor_client 10.16.4.186 10.251.50.26 10.251.50.81 10.251.52.27 10.251.133.12 10.251.133.22 10.251.133.32;
+monitor_server appname;
+monitor_client 127.0.0.1;
