--- a/trunk/conf/nginx.conf
+++ b/trunk/conf/nginx.conf
@@ -1,10 +1,11 @@
-
-user  www;
 worker_processes  32;
 worker_rlimit_nofile 655350;
 
-esb_server_info esb-159;
-mongodb_conn app-vesb-02.vancldb.com 37057;
+#aio server name
+esb_server_info esb-server;
+
+#mongo connection
+mongodb_conn 127.0.0.1 27017;
 include esb_monitor.conf;
 
 #error_log  logs/error.log;
@@ -26,10 +27,6 @@ http {
     include       mime.types;
     default_type  application/octet-stream;
 
-    #log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-    #                  '$status $body_bytes_sent "$http_referer" '
-    #                  '"$http_user_agent" "$http_x_forwarded_for"';
-
     #access_log  logs/access.log  main;
 
     sendfile        on;
@@ -43,41 +40,4 @@ http {
     
     
     include       servers.conf;
-
-    # another virtual host using mix of IP-, name-, and port-based configuration
-    #
-    #server {
-    #    listen       8000;
-    #    listen       somename:8080;
-    #    server_name  somename  alias  another.alias;
-
-    #    location / {
-    #        root   html;
-    #        index  index.html index.htm;
-    #    }
-    #}
-
-
-    # HTTPS server
-    #
-    #server {
-    #    listen       443;
-    #    server_name  localhost;
-
-    #    ssl                  on;
-    #    ssl_certificate      cert.pem;
-    #    ssl_certificate_key  cert.key;
-
-    #    ssl_session_timeout  5m;
-
-    #    ssl_protocols  SSLv2 SSLv3 TLSv1;
-    #    ssl_ciphers  HIGH:!aNULL:!MD5;
-    #    ssl_prefer_server_ciphers   on;
-
-    #    location / {
-    #        root   html;
-    #        index  index.html index.htm;
-    #    }
-    #}
-
 }
