--- a/trunk/conf/upstreamserver.conf
+++ b/trunk/conf/upstreamserver.conf
@@ -1,13 +1,7 @@
 ﻿#esb config
 
 #customer server
-upstream et.vancloa.cn {
-    server 10.251.50.17:80;
-}
-upstream esb.vancloa.cn {
-    server 10.251.141.116:80;
-}
-upstream servicelogger.vancldb.com {
+upstream example.com {
 	server 10.251.24.39:80;
 	server 10.251.24.40:80;
 	server 10.251.24.41:80;
