--- a/trunk/conf/esb_merge_address_list.conf
+++ b/trunk/conf/esb_merge_address_list.conf
@@ -1,5 +1,3 @@
-esb_merge_address IsActivited /6NBFz2;
-esb_merge_address GetProductPointByLevelId /baM32q;
-esb_merge_address GetUserNames /eQb6F3;
-esb_merge_address GetUserName /eQb6F3;
-esb_merge_address QueryUserIsInBlackList /FRFNnu;
+#example:
+#
+#esb_merge_address api_name /6NBFz2;
