--- a/trunk/conf/servers.conf
+++ b/trunk/conf/servers.conf
@@ -1,7 +1,7 @@
 include log_format.conf;
 include proxy.conf;
-include esb_merge_address_list.conf;
-#include upstreamserver.conf;
+include deployments/apiroute/*.conf;
+include deployments/upstream/*.conf;
 
 mongodb_conn 127.0.0.1 27017;
 
@@ -19,7 +19,7 @@ server {
                         index  index.xml  index.html index.htm index.php;
                 }
 
-                include locations.conf;
+                include deployments/*.conf;
 				
         #status config
         include status.conf;
